--- a/index.html
+++ b/index.html
@@ -9,25 +9,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <title>Casa de toño</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <!-- FLICKITY JS -->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <title>JOS BURGUERS</title>
     <link rel="StyleSheet" href="styles.css">
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="content-container">
-        <div class="header">
-            <h1 class="header">Casa de toño</h1>
-        </div>
-        <div class="site-introduction">
-            <div class="site-image">
-                <img src="imgs/site-image.png" alt="CasaDeToño.jpg">
+
+        <header>
+            <div class="nav-container">
+                <div>
+                    <a href="/"><img src="imgs/JOS-BURGUERS.png" alt="LOGO"></a>
+                </div>
+                <nav class="nav">
+                    <ul>
+                        <li class="nav-item"> <a href="#home">HOME</a> </li>
+                        <li class="nav-item"> <a href="#menu">MENÚ</a> </li>
+                        <li class="nav-item"> <a href="#mesas">MESAS</a> </li>
+                    </ul>
+                </nav>
             </div>
-            <div class="site-description">
-                <p>Bienvenido a nuestro sitio Web. Aquí podrás realizar una reserva para nuestro restaurante</p>
+        </header>
+
+        <section class="slider" id="home">
+            <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 1500, "pageDots": false }'>
+                <div class="carousel-cell"> <img src="imgs/SLIDER1.jpg" alt=""></div>
+                <div class="carousel-cell"> <img src="imgs/SLIDER2.jpg" alt=""></div>
+                <div class="carousel-cell"> <img src="imgs/SLIDER3.jpg" alt=""></div>
             </div>
-        </div>
-        <div class="table-reservation-button">
-            <button type="button" class="btn btn-primary">Reservar mesa</button>
-        </div>
+        </section>
+
+        <section class="proposito section">
+            <div>
+                <h2>PROPÓSITO</h2>
+                <p>Existimos para crear experiencia de servicio y calidad,
+                    generando el 360° del Feel Good place.</p>
+            </div>
+        </section>
+
+        <section id="menu" class="menu section">
+            <div>
+                <h2>MENÚ</h2>
+                
+            </div>
+        </section>
+
+        <section id="mesas" class="mesas section">
+            <div>
+                <h2>MESAS</h2>
+                <a href="#mesas" class="button" id="button">RESERVAR MESA</a>
+            </div>
+        </section>
+
     </div>
 </body>
 </html>
